productionLine initial build done